--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+
+    <key>NSPhotoLibraryUsageDescription</key>
+	<string>This app requires access for Photo Library Usage</string>
+	<key>NSMicrophoneUsageDescription</key>
+    <string>This app requires access to microphone</string>
+    <key>NSCameraUsageDescription</key>
+    <string>This app requires access to camera</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
