--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   image_cropper: ^3.0.3
   image_picker: ^0.8.7+4
   cached_network_image: ^3.3.0
+  firebase_core: ^2.24.0
 
 dev_dependencies:
   flutter_test:
