--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   image_picker: ^0.8.7+4
   cached_network_image: ^3.3.0
   firebase_core: ^2.24.0
+  firebase_storage: ^11.5.3
+  uuid: ^4.2.1
 
 dev_dependencies:
   flutter_test:
