--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   firebase_core: ^2.24.0
   firebase_storage: ^11.5.3
   uuid: ^4.2.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
