--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   firebase_storage: ^11.5.3
   uuid: ^4.2.1
   intl: ^0.19.0
+  socket_io_client: ^2.0.3+1
 
 dev_dependencies:
   flutter_test:
